--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -3384,21 +3384,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Datasets and DataFrames\n",
-    "So far, we've mostly used Spark's RDD API. It's common to use case classes to represent the \"schema\" of records when working with RDDs, but also with a new type, [Dataset[T]](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.Dataset), analogous to `RDD[T]`, where the `T` represents the type of records.\n",
+    "## Datasets et DataFrames\n",
+    "Jusque là, nous avons principalement utilisé l'API RDD de Spark. Les case classes sont souvent utilisées pour représenter des \"schema\" de records quand on utilise des RDD. Elles le sont également avec un nouveau type, [Dataset[T]](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.Dataset), qui est similaire à `RDD[T]`, où `T` représente un type de records.\n",
     "\n",
-    "A problem with [DataFrames](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.DataFrame) is the fact that the fields are untyped until you try to access them. `Datasets` restore the type safety of `RDDs` by using a case class as the definition of the schema. \n",
+    "Les [DataFrames](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.DataFrame) possèdent un problème qui est que les champs sont non-typés jusqu'à leur accès. Les `Datasets` rétablissent l'assurance du type des `RDD` en utilisant une case class comme la définition d'un schema.\n",
     "\n",
-    "`Datasets` were introduced in Spark 1.6.0, but they are somewhat incomplete in the 1.6.X releases. In Spark 2.0.0, `Dataset` becomes the \"parent\" class of `DataFrame`. This means that you'll be encouraged to use the greater type safety of `Dataset`, but you can still use `DataFrame` if you want. Now, `DataFrame` will be the equivalent of `Dataset[Row]`, where [Row](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.Row) is the loosely-typed representation of the row and its columns."
+    "Les `Datasets` ont été introduits avec Spark 1.6.0, mais elles étaient quelque peu incomplètes dans les versions 1.6.X. Dans Spark 2.0.0, `Dataset` devient la classe \"parente\" de `DataFrame`. Cela signifie qu'il est recommandé d'utiliser la plus grande assurance de type de `Dataset`, mais vous pouvez toujours utiliser `DataFrame` si vous le souhaitez. Maintenant, `DataFrame` est l'équivalent de `Dataset[Row]`, où [Row](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.Row) est la représentation grossière des row et columns.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try it out. But first, we need to import some SparkSQL-related code. Scala lets you import code almost anywhere, whereas Java requires imports at the beginning of source files. Scala also lets you import members of instances, not just the static imports supported by Java. \n",
+    "Essayons cela. Mais d'abord, nous devons importer du code venant de SparkSQL. Scala vous laisse importer du code n'importe où, alors qu'avec Java les imports se font au début du fichier source. Scala vous laisse aussi importer des membres des instances, pas juste des imports statiques supportés par Java.\n",
     "\n",
-    "So, the next cell imports some \"implicits\" from the [SQLContext](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.SQLContext) instance already in scope. Unfortunately, due to a scoping ambiguity involving notebooks and the Scala interpreter, we need to assign `sqlContext` to a new variable, _then_ import from that:"
+    "La prochaine cellule importe donc des \"implicits\" de l'instance [SQLContext](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.SQLContext) qui est déjà dans le scope. Malheureusement, dû à une ambiguïté du scope impliquant les notebooks et l'interpréteur Scala, nous devons assigner `sqlContext` à une nouvelle variable et _ensuite_ importer avec celle-ci :"
    ]
   },
   {
@@ -3435,7 +3435,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll explain what \"implicits\" are <a href=\"#implicits\">later</a>. For now, suffice it to say that they are used to \"allow\" us to call the `as` method on our `iiDF` `DataFrame`, which converts it to a `Dataset[IIRecord]`."
+    "We'll explain what \"implicits\" are <a href=\"#implicits\">later</a>. For now, suffice it to say that they are used to \"allow\" us to call the `as` method on our `iiDF` `DataFrame`, which converts it to a `Dataset[IIRecord]`.\n",
+    "\n",
+    "Nous allons expliquer ce que sont les `implicits` <a href=\"#implicits\">plus tard</a>. Pour le moment, ils nous \"permettent\" d'appeler la méthode `as` sur notre `DataFrame` `iiDF`, ce qui la convertit en `Dataset[IIRecord]`. "
    ]
   },
   {
@@ -3846,78 +3848,78 @@
     "<a name=\"TryOptionNull\"></a>\n",
     "### Try vs. Option vs. null\n",
     "\n",
-    "Recall the signature of our `curl` method near the beginning of this notebook:\n",
+    "Rappelez-vous de la signature de notre méthode `curl` au début de ce notebook.\n",
     "\n",
     "```scala\n",
     "def curl(sourceURLString: String, targetDirectoryString: String): File = ...\n",
     "```\n",
     "\n",
-    "It returns a `File` when everything goes well, but it could throw an exception. An alternative is return a `Try[File]`, where the [Try](http://www.scala-lang.org/api/current/index.html#scala.util.Try) encapsulates both cases in the return value, as we'll discuss next. We'll also discuss an alternative, [Option](http://www.scala-lang.org/api/current/index.html#scala.Option)."
+    "Elle retourne un `File` quand tout va bien, mais elle peut aussi renvoyer une exception. Une alternative est de retourner un `Try[File]` où [Try](http://www.scala-lang.org/api/current/index.html#scala.util.Try) encapsule les deux cas dans la valeur de retour, comme nous le verrons plus tard. Nous verrons également une autre alternative, [Option](http://www.scala-lang.org/api/current/index.html#scala.Option)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose instead that we declared `curl` to return [util.Try[T]](http://www.scala-lang.org/api/current/index.html#scala.util.Try), where `T` is `java.io.File`. The only change to the body would be to simply add `Try` before the opening bracket:\n",
+    "Supposons maintenant que nous déclarions `curl` pour qu'elle retourne [util.Try[T]](http://www.scala-lang.org/api/current/index.html#scala.util.Try), où `T` est un `java.io.File`. La seule chose à changer dans le corps de la méthode est de tout simplement ajouter un `Try` avant la parenthèse ouvrante :\n",
     "\n",
     "```\n",
     "def curl(sourceURLString: String, targetDirectoryString: String): Try[File] = Try {...}\n",
     "```\n",
     "\n",
-    "Now, the reader knows from the method signature that it might fail somehow. If a call fails, the relevant exception will be returned wrapped in a subclass of `Try`, called [util.Failure[T]](http://www.scala-lang.org/api/current/index.html#scala.util.Failure). However, if `curl` succeeds, the `File` will be returned wrapped in the other subclass of `Try`, [util.Success[T]](http://www.scala-lang.org/api/current/index.html#scala.util.Success).\n",
+    "Maintenant avec cette signature, le lecteur sait que la méthode peut potentiellement échouer. Si un appel échoue, une exception adéquate sera retournée enveloppée dans une sous-classe de `Try` appelée [util.Failure[T]](http://www.scala-lang.org/api/current/index.html#scala.util.Failure). Toutefois, si `curl` réussi, le `File` sera retourné enveloppé dans une autre sous-classe de `Try` : [util.Success[T]](http://www.scala-lang.org/api/current/index.html#scala.util.Success).\n",
     "\n",
-    "Because of Scala's type safety, the caller of `curl` must determine which result was returned and handle it appropriately. That is, the caller must determine if a `Success` or `Failure` was returned and handle it appropriately.\n",
+    "Grâce à l'assurance de type de Scala, l'appelant de `curl` doit déterminer quel résultat est retourné et le gérer de manière adéquate. Cela signifie que l'appelant doit déterminer si `Success` ou `Failure` a été retourné, et le traiter de manière adéquate.\n",
     "\n",
-    "Scala does not have exception declarations like Java. So, looking at the signature of our original version, there's no obvious way to know if it throws an exception _or_ returns `null` on failure:\n",
+    "Scala ne possède pas de déclarations d'exceptions comme Java. Donc en regardant la version orginiale de notre signature, il n'y a pas de manière évidente de voir si la méthode renvoit une exception _ou_ un `null` en cas d'échec.\n",
     "\n",
     "```scala\n",
     "def curl(sourceURLString: String, targetDirectoryString: String): File = {...}\n",
     "```\n",
     "\n",
-    "If we choose to catch exceptions internally and return `null`, the caller has to remember to check for `null`. Otherwise, the infamous [NullPointerException](https://docs.oracle.com/javase/8/docs/api/java/lang/NullPointerException.html) might happen occasionally if the caller assumes a non-`null` value is returned. So, using `Try[T]` prevents us from this loophole. _It helps the user do the right thing!_\n",
+    "Si nous choisissons d'attraper les exceptions en interne et retournons `null`, l'appelant doit se rappeler de vérifier le cas pour `null`. Sinon, le célèbre [NullPointerException](https://docs.oracle.com/javase/8/docs/api/java/lang/NullPointerException.html) peut apparaître occasionellement si l'appelant suppose qu'une valeur non-`null` est retournée. Donc utiliser `Try[T]` nous protège de cette faille. _Cela aide l'utilisateur à faire la bonne chose !_\n",
     "\n",
-    "Also, using `Try` rather than simply throwing an exception, means that `curl` always returns \"normally\", so the caller maintains full control of the call stack and special exception-catching logic isn't required."
+    "Utiliser `Try` au lieu de simplement renvoyer une exception signifie également que `curl` retourne toujours, \"normalement\", quelque chose, pour que l'appelant puisse avoir un contrôle total sur la stack d'appel et pour ne pas qu'une logique spéciale d'exception-catching soit requise."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What are all the possible valid subclasses of `Try`? Really, there are only two, `Success` and `Failure`. It would be a mistake to allow a user to define other subtypes, like `MaybeCouldFailButWhoKnows`, because users of `Try` in pattern matching will always want to know that there are only two possibilities. Scala adds a keyword to enforce this logical behavior. `Try` is actually declared as follows:\n",
+    "Quelles sont les sous-classes valides de `Try` ? Il n'y en a que deux : `Success` et `Failure`. Ce serait une erreur d'autoriser les utilisateurs de définir d'autres sous-classes comme `PeutEchouerMaisQuiSait`, car les utilisateurs de `Try` voudront toujours savoir qu'il n'y a que deux possibilités en pattern matching. Scala ajoute un mot-clé pour renforcer ce comportement logique. `Try` se déclare en fait de la façon suivante :\n",
     "\n",
     "```scala\n",
     "sealed abstract class Try[+T] extends AnyRef\n",
     "```\n",
     "\n",
-    "(`AnyRef` is the same as Java's `Object` supertype.) The `sealed` keyword says that _no_ subclasses of `Try` can be declared, _except_ in the same source file (which the library author wrote). Hence, users of `Try` can't declare their own subclasses, subverting the logical structure of this type hierarchy and other user's code that relies on this structure."
+    "(`AnyRef` est identique au supertype `Object` de Java.) Le mot-clé `sealed` fait qu'on ne peut déclarer _aucune_ sous-classe de `Try`; _sauf_ si c'est dans le même fichier source que cette déclaration (qui est dans la bibliothèque que l'auteur a écrit). Ainsi, les utilisateurs de `Try` ne peuvent pas déclarer leur propre sous-classes, ce qui altèrerait la structure logique de cette hiérarchie de type et autres code d'utilisateurs qui seraient dépendants de cette structure."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What if we have a situation where it makes no sense to involve an exception, but we want the same logically handling? This is where [Option[T]](http://www.scala-lang.org/api/current/index.html#scala.Option) comes in. \n",
+    "Et si nous avons une situtation dans laquelle il est illogique d'inclure une exception mais que nous voulons le même traitement logique ? C'est là où vient [Option[T]](http://www.scala-lang.org/api/current/index.html#scala.Option).\n",
     "\n",
-    "`Option` is analogous to `Try`, it is a `sealed` abstract type with two possible subtypes:\n",
+    "`Option` est similaire à `Try`, c'est un `sealed` abstract type avec deux possibles sous-types :\n",
     "\n",
-    "* [Some[T]](http://www.scala-lang.org/api/current/index.html#scala.None): I have a an instance of `T` for your, inside the `Some[T]`.\n",
-    "* [None](http://www.scala-lang.org/api/current/index.html#scala.None): I don't have a value for your, sorry.\n",
+    "* [Some[T]](http://www.scala-lang.org/api/current/index.html#scala.None): J'ai une instance `T` pour votre résultat, à l'intérieur de `Some[T]`\n",
+    "* [None](http://www.scala-lang.org/api/current/index.html#scala.None): Je n'ai pas de valeur pour votre résultat, désolé.\n",
     "\n",
-    "Note that a hash map is a great example where I either have a value for a given key or I don't. Therefore, for Scala's [Map[K,V]](http://www.scala-lang.org/api/current/index.html#scala.collection.Map) abstraction, where `K` is the key type and `V` is the value type, the `get` method has this signature:\n",
+    "Notez qu'un hash map est un bon example où nous avons ou pas une valeur pour une clé donnée. Par conséquent, pour l'abstraction  [Map[K,V]](http://www.scala-lang.org/api/current/index.html#scala.collection.Map) de Scala où `K` est le type de la clé et `V` est le type de la valeur, la méthode `get` a cette signature :\n",
     "\n",
     "```scala\n",
     "def get(key: K): Option[V]\n",
     "```\n",
     "\n",
-    "One again, you know from the type signature that you may or may not get a value instance for the input key, _and_ you **must** determine whether you got a `Some[V]` or a `None` as the result. Once again, we avoid returning a `null` value and risking a `NullPointerException` if we forget to handle it."
+    "Encore une fois, vous voyez avec cette signature que vous allez avoir ou non une instance de valeur pour la clé donnée en entrée, _et_ vous **devez** déterminer si vous obtenez un `Some[V]` ou `None` comme résultat. Encore une fois, nous évitons de retourner `null` et de risquer un `NullPointerExceptions` si nous oublions de gérer ce cas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, how do we determine which `Option[T]` was returned? Let's look a few examples using `Option`. Can you guess what they are doing? Check the [Option Scaladocs](http://www.scala-lang.org/api/current/#scala.Option) to confirm. `Try` can be used similarly, with a few other ways available that we won't discuss here (but see the [Try Scaladocs](http://www.scala-lang.org/api/current/#scala.util.Try))."
+    "Comment déterminons-nous alors quel `Option[T]` a été retourné ? Voyons quelques exemples utilisant `Option`. Pouvez vous deviner ce qu'ils font ? Vérifier l'[Option Scaladocs](http://www.scala-lang.org/api/current/#scala.Option) pour confirmer. `Try` peut être utilisé de manière similaire, avec d'autres moyens disponibles que nous ne discuterons pas ici (mais regardez le [Try Scaladocs](http://www.scala-lang.org/api/current/#scala.util.Try))."
    ]
   },
   {
@@ -3992,7 +3994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you just want to ignore the `None` values, use a _for comprehension_:"
+    "Si vous voulez juste ignorer les valeurs `None`, utilisez un _for comprehension_ :"
    ]
   },
   {
@@ -4021,7 +4023,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, you might wonder how `None` is declared. Consider this example:"
+    "Finalement, vous vous demandez peut-être comment `None` est déclaré. Considérez l'exemple suivant :"
    ]
   },
   {
@@ -4067,14 +4069,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This works, so it must mean that `None` is a valid subclass of `Option[String]`. That's actually true for all `Option[T]`. How can a single object be a valid subtype for _all_ of them? Here is how it's declared (omitting some details):\n",
+    "Cela marche, donc cela veut dire que `None` est une sous-classe valide d'`Option[String]`. C'est en fait vrai pour tout `Option[T]`. Comment un seul object peut-il être un sous-type valide de _tous_ ces options ? Voilà comment il est déclaré (en ignorant quelques détails) : \n",
     "\n",
     "```scala\n",
     "object None extends Option[Nothing] {...}\n",
     "\n",
     "```\n",
     "\n",
-    "`None` carries no \"state\" information, because it doesn't wrap an instance like `Some[T]` does. Hence, we only need one instance for all uses, so it's declared as an object. Recall we mentioned above that the type system has a [Nothing](http://www.scala-lang.org/api/current/#scala.Nothing) type, which is a subtype of all other types. Without diving into too many details, if a variable is of type `Option[String]`, then you can use an `Option[Nothing]` for it (i.e., the latter is a subtype of the former). This is why `Nothing` is useful, for cases like `None`, so we can have one instance of it, but still obey the rules of Scala's object-oriented type system."
+    "`None` ne porte aucune information d'\"état\" car il n'enveloppe pas d'instance comme le fait `Some[T]`. Ainsi, nous n'avons besoin que d'une instance pour toutes ces utilisations, donc il est déclaré comme un objet. Rappelez-vous que nous avons mentionné au-dessus que le système de type possède un type [Nothing](http://www.scala-lang.org/api/current/#scala.Nothing) qui est un sous-type de tout les autres types. Sans rentrer dans les détails, si une variable est de type `Option[String]`, alors vous pouvez utiliser un `Option[Nothing]` pour elle (i.e., ce dernier est un sous-type du premier). C'est pour cela que `Nothing` est utile : pour les cas comme `None`, pour que nous puissons avoir une instance de cela, mais qui obéit quand meme aux règles du système de types orienté objet de Scala."
    ]
   },
   {
