--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -2926,10 +2926,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scala's Object Model\n",
-    "Scala is a _hybrid_, object-oriented and functional programming language. The philosophy of Scala is that you exploit object orientation for encapsulation of details, i.e., _modularity_, but use functional programming for its logical precision when implementing those details. Most of what we've seen so far falls into the functional programming camp. Much of data manipulation and analysis is really Mathematics. Functional programming tries to stay close to how functions and values work in Mathematics.\n",
+    "## Le modèle Objet de Scala\n",
+    "Scala est un langage de prommation _hybride_, orienté objet et fonctionnel. La philosophie de Scala est que nous exploitons l'orienté objet pour l'encapsulation des détails, c-à-d _la modularité_, mais nous utilisons la programmation fonctionnelle pour sa précision logique lorsque nous implémentons ces détails. La majorité de ce que nous avons vu jusque-là relève plus de la programmation fonctionnelle. Une grande partie de la manipulation et l'analyse des données est en fait des mathématiques. La programmation fonctionnelle essaye de rester le plus proche possible du fonctionnement des fonctions et valeurs des mathématiques.\n",
     "\n",
-    "However, when writing non-trivial Spark programs, it's occasionally useful to exploit the object-oriented features."
+    "Cependant en codant des programmes Spark non-triviaux, il est parfois utile d'exploiter les fonctionnalités orientés objet."
    ]
   },
   {
@@ -4084,22 +4084,22 @@
    "metadata": {},
    "source": [
     "### Implicits\n",
-    "<a name=\"implicits\"></a>\n",
-    "Scala has a powerful mechanism known as _implicits_ that is used in the Spark Scala API. Implicits are a big topic, so we'll focus just on the uses of it that are most important to understand.  "
+    "<a name=\"implicits\"></a>  \n",
+    "Scala possède un méchanisme puissant appelé _implicits_ qui est utilisé dans l'API Spark Scala. Les implicits représentent un sujet vaste, nous nous attarderons donc seulement sur les usages de ceux-ci qui sont important de comprendre. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Type Conversions\n",
-    "We used `RDD` methods like `reduceByKey` above, but if you search for this method in the [RDD Scaladoc page](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.rdd.RDD), you won't find it. Instead it's defined in the [PairRDDFunctions](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.rdd.PairRDDFunctions) type (along with all the other `*ByKey` methods). So, how can we use these methods as if they are defined for `RDD`??\n",
+    "#### Conversion de types\n",
+    "Au-dessus nous avons utilisé des méthodes de `RDD` comme `reduceByKey`, mais si vous cherchez cette méthode dans la [page RDD de Scaladoc](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.rdd.RDD), vous ne la trouverez pas. À la place, elle est définie dans le type [PairRDDFunctions](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.rdd.PairRDDFunctions) (avec les autres méthodes de la forme `*ByKey`). Comment alors pouvons nous utiliser ces méthodes comme si elles étaient définies pour des `RDD` ??\n",
     "\n",
-    "When the Scala compiler sees code calling a method that doesn't exist on the type, it looks for an _implicit conversion_ in the current scope, which can transform the instance into another type (i.e., by wrapping it), where the other type provides the needed method. The full signature inferred for the method as it's used must match the definition in the wrapping class.\n",
+    "Quand le compilateur Scala voit un bout de code appeler une méthode qui n'existe pas pour un type, il cherche une _conversion implicit_ dans le scope, ce qui transforme l'instance dans un autre type possédant la méthode requise (c-à-d en l'enveloppant). La signature complète déduite pour la méthode doit correspondre à la définition de la classe enveloppante.\n",
     "\n",
-    "> **Note:** If you don't find a method in the [Spark Scaladocs](http://spark.apache.org/docs/latest/api/scala/index.html#package) for a type where you think it should be defined, look for related helper types with the method.\n",
+    "> **Note:** Si vous ne trouvez pas une méthode dans la [Scaladocs Spark](http://spark.apache.org/docs/latest/api/scala/index.html#package) pour un type où vous pensez qu'elle devrait être définie, pensez à regarder les helper types associés à la méthode.\n",
     "\n",
-    "Here's a small Scala example of how this works:"
+    "Voici un petit exemple Scala de ce fonctionnement :\n"
    ]
   },
   {
@@ -4172,7 +4172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For `RDDs`, the implicit conversions to `PairRDDFunctions` and other support types are handled for you. However, when you use Spark SQL and the [DataFrame](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.DataFrame) API, you'll need to import some of these conversions yourself:"
+    "Pour les `RDDs`, les conversions implicites vers `PairRDDFunctions` et autres types supports sont gérés pour vous. Cependant, lorsque vous utilisez Spark SQL et l'API [DataFrame](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.DataFrame), vous devrez vous-même importer quelques-unes de ces conversions comme cela :"
    ]
   },
   {
@@ -4271,18 +4271,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The column-reference syntax `$\"name\"` is implemented using the same mechanism in the Scala library that implements interpolated strings, `s\"$foo\"`. The `import sqlc.implicits._` makes it available. \n",
+    "La syntaxe de référence de colonne `$\"name\"` est implémentée en utilisant le même méchanisme de la librairie Scala qui implémente les _interpolated strings_, `s\"$foo\"`. Le `import sqlc.implicits._` la rend utilisable.\n",
     "\n",
-    "Note we imported something from an _instance_, rather than a package or type, as allowed in Java. This can be a useful feature in Scala, but it's also fragile, If you try `import sqlContext.implicits._`, you'll get a compiler error that a \"stable identifier\" is required. It turns out that doing the value assignment, `val sqlc = sqlContext` first meets this requirement. This is unique to the notebook environment. You normally won't see this problem if you use the `spark-shell` that comes with a Spark distribution or you write a Spark program and compile it with the Scala compiler.\n",
+    "Notez que nous avons importé quelque chose d'une _instance_, au lieu d'un package ou un type comme dans Java. Cela peut être une fonctionnalité utile dans Scala, mais également délicate. Si vous essayez `import sqlContext.implicits._`, vous aurez une erreur de compilation qui requiert un \"stable identifier\". Il s'avère qu'assigner la valeur `val sqlc = sqlContext` en premier permet de remplir cette condition. Cela est unique à l'environnement du notebook. Normalement, vous ne rencontrerez pas ce problème si vous utilisez le `spark-shell` qui vient avec la distribution Spark, ou si vous écrivez un programme Spark et le compilez avec le compilateur Scala.\n",
     "\n",
-    "However, it would be better if Spark defined this `implicits` object on the `SQLContext` companion object instead of on instances of it!"
+    "Cependant, ce serait mieux si Spark définissait cet objet `implicits` dans l'object compagnon de `SQLContext` à la place d'instances de celui-ci !"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For completeness, but unrelated to implicits, the `DataFrame` API lets you write SQL-like queries with a programmatic API. If you want to use built in functions like `min`, `max`, etc. on columns, you need the following `import` statement:"
+    "Pour compléter, mais sans rapport avec les implicits, l'API `DataFrame` vous permet d'écrire des requêtes à la SQL avec une API programmatique. Si vous voulez utiliser des fonctions intégrées comme `min`, `max`, etc. sur les colonnes, vous devez faire l'`import` suivant :"
    ]
   },
   {
@@ -4298,7 +4298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can use `min`, `max`, `avg`, etc."
+    "Maintenant nous pouvons utiliser `min`, `max`, `avg`, etc."
    ]
   },
   {
@@ -4348,17 +4348,17 @@
    "metadata": {},
    "source": [
     "#### Implicit Method Arguments\n",
-    "One other use of implicits worth understanding is _implicit arguments_ to methods. You will encounter this mechanism used when you read the Spark Scaladocs, even though you might never realize you're actually using it in your code!\n",
+    "Une autre utilisation des implicits qui mérite d'être su est les _arguments implicites_ de méthodes. Vous rencontrerez ce méchanisme en lisant le Spark Scaladocs, même si vous pourriez ne jamais comprendre qu'en fait vous l'utilisez dans votre code !\n",
     "\n",
-    "Recall I mentioned previously that you can define default values for method arguments. I just used it for the `age` argument for `Person`:\n",
+    "Souvenez vous que, précédemment, j'ai mentionné le fait de pouvoir définir des valeurs par défaut pour les arguments de méthodes. Je l'ai utilisé pour l'argument `age` dans `Person`:\n",
     "\n",
     "```scala\n",
     "case class Person(name: String, age: Int = 0)\n",
     "```\n",
     "\n",
-    "Sometimes we need something more sophisticated. For example, our library might have a group of methods that need a special argument passed to them that provides useful \"context\" information, but you don't want the user to be required to explicitly pass this argument every time. Other times you might use implicit arguments to make the API \"cleaner\", but still have some control over what's allowed.\n",
+    "Parfois nous avons besoin de quelque chose de plus sophistiqué. Par exemple, notre librairie possède un groupe de méthodes ayant besoin chacun d'un argument spécial qui leur prodigue une information de \"contexte\" utile, mais vous ne voulez pas que l'utilisateur soit obligé de passer cet argument à chaque fois. À d'autres moments vous pourriez utiliser les arguments implicites pour que l'API soit plus \"propre\", tout en gardant le contrôle sur ce qui est autorisé de mettre.\n",
     "\n",
-    "Here's an example, that's partly inspired by Scala's [Seq.sum](http://www.scala-lang.org/api/current/#scala.collection.Seq) method. Wouldn't it be great if I happen to have a collection of things I can \"add\" together, if I could just call `sum` on the collection? Let's do this in a slightly different way, with a helper `sum` method outside of `Seq`."
+    "Voici un exemple qui est en partie inspiré de la méthode [Seq.sum](http://www.scala-lang.org/api/current/#scala.collection.Seq) de Scala. Ne serait-ce pas formidable si en ayant une collection de choses que nous pouvons \"ajouter\" ensemble, il suffirait d'appeller la méthode `sum` pour cette collection ? Faisons cela de manière un peu différente, avec une méthode helper `sum` en dehors de `Seq`."
    ]
   },
   {
@@ -4505,13 +4505,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, the implicit values `intAdd`, `doubleAdd`, and `stringAdd`, were used by the Scala interpreter for the `adder` argument in the second _argument list_ for `sum`. Note that you have to use a second argument list and all arguments there must be implicit. \n",
+    "Les valeurs implicites `intAdd`, `doubleAdd`, et `stringAdd` ont donc été utilisées par l'interpréteur Scala pour l'argument `adder` dans la seconde `liste d'arguments` de `sum`. Notez que vous devez utiliser une seconde liste d'arguments et que tous les arguments de cette liste doivent être implicites.\n",
     "\n",
-    "We could have avoided using implicit arguments if we defined custom `sum` methods for every type. That would have been simpler in this trivial case, but for nontrivial methods, the duplication is worth avoiding. Another advantage of this mechanism is that the user can define her own implicit `Add[T]` instances for domain types (say for example, `Money`) and they would \"just work\".\n",
+    "Nous aurions pu éviter d'utiliser des arguments implicites si nous avions défini des méthodes custom `sum` pour chaque type. Cela aurait été plus simple dans ce cas trivial, mais pour des méthodes non-trivials les arguments implicites valent plus le coup pour éviter de la duplication. Un autre avantage de ce méchanisme est que l'utilisateur peut definir sa propre instance implicite `Add[T]` pour des domain types (par exemple `Money`) et ils \"marcheraient\".\n",
     "\n",
-    "The Scala collections API uses this mechanism to know how to construct a new collection of the same kind as the input collection when you use `map`, `flatMap`, `reduceLeft`, etc.\n",
+    "L'API collections de Scala utilise ce fonctionnement pour savoir comment construire une nouvelle collection du même type que la collection mise en entrée quand on utilise `map`, `flatMap`, `reduceLeft`, etc.\n",
     "\n",
-    "Spark uses this pattern for [Encoders](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.Encoder) in  Spark SQL. Encoders are used to serialize values into the new, compact memory encoding introduced in the _Tungsten_ project (see for example, [here](https://spark-summit.org/2015/events/deep-dive-into-project-tungsten-bringing-spark-closer-to-bare-metal/)). Here's an example of creating a [Dataset](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.Dataset), where the `toDS` method is first \"added\" to a Scala [Seq](http://www.scala-lang.org/api/current/#scala.collection.Seq) through an implicit conversion (specifically [SQLImplicits.localSeqToDatasetHolder](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.SQLImplicits), which is brought into scope by the `import sqlc.implicits._` statement earlier) and then `toDS` uses `Encoders` internally."
+    "Spark utilise ce pattern pour les [Encoders](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.Encoder) dans Spark SQL. Les Encoders sont utilisés pour sérialiser des valeurs dans le nouveau et compact encodage de mémoire introduite par le projet _Tungsten_ (par exemple [ici](https://spark-summit.org/2015/events/deep-dive-into-project-tungsten-bringing-spark-closer-to-bare-metal/)). Voici un exemple pour créer un [Dataset](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.Dataset), où la méthode `toDS` est \"ajoutée\" en premier dans un [Seq](http://www.scala-lang.org/api/current/#scala.collection.Seq) à l'aide d'une conversion implicite (en particulier [SQLImplicits.localSeqToDatasetHolder](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.SQLImplicits) qui est utilisable dans le scope grâce à l'import `import sqlc.implicits._`), et ensuite `toDS` utilise `Encoders` en interne."
    ]
   },
   {
